name:                symon
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/simonmichael/symon#readme
license:             GPL-3
license-file:        LICENSE
author:              Simon Michael
maintainer:          simon@joyful.com
copyright:           Copyright: (c) 2016 Simon Michael
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable symon
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
